CM01/src/objects/Annotation__c.object
<CustomObject>
    <fields>
        <fullName>Agenda_Item__c</fullName>
        <label>Agenda Item</label>
        <referenceTo>Agenda_Item__c</referenceTo>
        <relationshipLabel>Annotation</relationshipLabel>
        <relationshipName>Annotation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawing_Vector__c</fullName>
        <label>Drawing Vector</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_Body__c</fullName>
        <label>Note Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Page_Number__c</fullName>
        <label>Page Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X__c</fullName>
        <label>X</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y__c</fullName>
        <label>Y</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Annotation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agenda_Item__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Page_Number__c</columns>
        <columns>X__c</columns>
        <columns>Y__c</columns>
        <columns>Note_Body__c</columns>
        <columns>Drawing_Vector__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>Drawing</fullName>
        <active>true</active>
        <label>Drawing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Note</fullName>
        <active>true</active>
        <label>Note</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>